force-app/main/default/objects/PS_Work_Guidelines_Details__c/fields/GuidlineSeq__c.field-meta.xml
<CustomField>
    <fullName>GuidlineSeq__c</fullName>
    <label>GuidlineSeq</label>
    <length>255</length>
    <type>Text</type>
</CustomField>