force-app/main/default/objects/PS_Work_Guidelines_Details__c/fields/Inspection_Sign_Off_Required__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Sign_Off_Required__c</fullName>
    <label>Inspection_Sign_Off_Required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>