force-app/main/default/objects/PS_Work_Guidelines_Details__c/fields/Sign_Off__c.field-meta.xml
<CustomField>
    <fullName>Sign_Off__c</fullName>
    <label>Sign_Off</label>
    <length>255</length>
    <type>Text</type>
</CustomField>