force-app/main/default/objects/PS_Work_Guidelines_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ProdGroup__c</columns>
    <columns>Type__c</columns>
    <columns>Text__c</columns>
    <columns>SubGroup__c</columns>
    <columns>Description__c</columns>
    <columns>Inspection_Sign_Off_Required__c</columns>
    <columns>Operation__c</columns>
    <columns>Sign_Off__c</columns>
    <columns>GuidlineSeq__c</columns>
    <columns>Text1Val__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>